--- a/src/AAL/Views/Assets/css/app.css
+++ b/src/AAL/Views/Assets/css/app.css
@@ -4,10 +4,18 @@
 
 /* Move down content because we have a fixed navbar that is 3.5rem tall */
 body {
-  padding-top: 3.5rem;
- 
+  padding-top: 3.5rem; 
 }
 
+
+.botao-pesquisar{
+  margin-right:10px;
+}
+
+.botao-menu-lateral{
+  color:white;
+  background-color: #d81c1e;
+}
 
 /*
  * Typography
@@ -30,6 +38,9 @@ h1 {
   bottom: 0;
   top: 51px;  
 }
+
+
+
 
 .menu-lateral-salao  .nav {
   margin-bottom: 20px;
